Upgrade dfx version to 0.5.8

--- a/src/nnsexp_assets/assets/index.html
+++ b/src/nnsexp_assets/assets/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-danger">
         <a class="navbar-brand" href="javascript:;">
-            <img src="https://www.dfinityexplorer.org/static/media/dfinity-explorer-logo.52c54b15.png" width="30" height="30" class="d-inline-block align-top" alt="">
+            <img src="./dfinity-explorer-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
